src/gallium/drivers/r600/evergreen_compute.c
@@ -1215,6 +1215,22 @@ void evergreen_init_atom_start_compute_cs(struct r600_context *rctx)
 	eg_store_loop_const(cb, R_03A200_SQ_LOOP_CONST_0 + (160 * 4), 0x1000FFF);
 }
 
+
+static void evergreen_get_compute_state_info(struct pipe_context *ctx, void *state,
+                                             struct pipe_compute_state_object_info *info)
+{
+	struct r600_context *rctx = (struct r600_context*)ctx;
+	struct r600_pipe_compute *shader = state;
+	
+	/* This is somehow copied from RadeonSI, but in thruth this not more
+	 * than an educated guess. */
+	uint8_t wave_size = r600_wavefront_size(rctx->b.screen->family);
+	info->private_memory = shader->sel->current->scratch_space_needed;
+	info->preferred_simd_size = wave_size;
+	info->simd_sizes = wave_size;
+	info->max_threads = 128;
+}
+
 void evergreen_init_compute_state_functions(struct r600_context *rctx)
 {
 	rctx->b.b.create_compute_state = evergreen_create_compute_state;
@@ -1224,7 +1240,7 @@ void evergreen_init_compute_state_functions(struct r600_context *rctx)
 	rctx->b.b.set_compute_resources = evergreen_set_compute_resources;
 	rctx->b.b.set_global_binding = evergreen_set_global_binding;
 	rctx->b.b.launch_grid = evergreen_launch_grid;
-
+	rctx->b.b.get_compute_state_info = evergreen_get_compute_state_info;
 }
 
 void *r600_compute_global_transfer_map(struct pipe_context *ctx,
